--- a/index2.html
+++ b/index2.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="encabezado">
-            <h1> Este es el encabezado Resuleve el Conflicto </h1>
+            <h1> Este es el encabezado final </h1>
         </div>
 
         <h2>Por favor llena el formulario</h2>
